编译原理实验/U201714607 钟子琛/实验 1~4/Lab3/parser.output
Terminals unused in grammar

   ARRAY
   bool
   DOT
   STRUCT
   EXP_STMT
   FUNCTION
   PARAM
   ARG
   CALL
   LABEL
   GOTO
   JLT
   JLE
   JGT
   JGE
   EQ
   NEQ
   ARRAY_FIRST


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: /* empty */
    3           | ExtDef ExtDefList

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier FuncDec CompSt
    6       | error SEMI

    7 ExtDecList: VarDec
    8           | VarDec COMMA ExtDecList

    9 Specifier: TYPE

   10 VarDec: ID LB INT RB
   11       | ID

   12 FuncDec: ID LP VarList RP
   13        | ID LP RP

   14 VarList: ParamDec
   15        | ParamDec COMMA VarList

   16 ParamDec: Specifier VarDec

   17 CompSt: LC DefList StmtList RC

   18 StmtList: /* empty */
   19         | Stmt StmtList

   20 Stmt: Exp SEMI
   21     | CompSt
   22     | RETURN Exp SEMI
   23     | IF LP Exp RP Stmt
   24     | IF LP Exp RP Stmt ELSE Stmt
   25     | WHILE LP Exp RP Stmt
   26     | FOR LP ForCondition RP Stmt

   27 ForCondition: ExpFor1 SEMI ExpFor2 SEMI ExpFor3

   28 DefList: /* empty */
   29        | Def DefList

   30 Def: Specifier DecList SEMI

   31 DecList: Dec
   32        | Dec COMMA DecList

   33 Dec: VarDec
   34    | VarDec ASSIGNOP Exp

   35 Exp: Exp ASSIGNOP Exp
   36    | Exp AND Exp
   37    | Exp OR Exp
   38    | Exp RELOP Exp
   39    | Exp PLUS Exp
   40    | Exp MINUS Exp
   41    | Exp STAR Exp
   42    | Exp DIV Exp
   43    | LP Exp RP
   44    | MINUS Exp
   45    | NOT Exp
   46    | VarDec SELFADD
   47    | SELFADD VarDec
   48    | VarDec SELFDEC
   49    | SELFDEC VarDec
   50    | VarDec ADD_ASSIGNOP Exp
   51    | VarDec MINUS_ASSIGNOP Exp
   52    | VarDec STAR_ASSIGNOP Exp
   53    | VarDec DIV_ASSIGNOP Exp
   54    | ID LP Args RP
   55    | ID LP RP
   56    | ID LB Exp RB
   57    | VarDec
   58    | INT
   59    | FLOAT
   60    | CHAR
   61    | BREAK

   62 Args: Exp COMMA Args
   63     | Exp

   64 ExpFor1: /* empty */
   65        | VarDec ASSIGNOP Exp

   66 ExpFor2: /* empty */
   67        | VarDec RELOP Exp

   68 ExpFor3: /* empty */
   69        | ExpFor3List

   70 ExpFor3List: Exp
   71            | Exp COMMA ExpFor3List


Terminals, with rules where they appear

$end (0) 0
error (256) 6
INT (258) 10 58
FLOAT (259) 59
CHAR (260) 60
ID (261) 10 11 12 13 54 55 56
RELOP (262) 38 67
TYPE (263) 9
ARRAY (264)
LP (265) 12 13 23 24 25 26 43 54 55
RP (266) 12 13 23 24 25 26 43 54 55
LB (267) 10 56
RB (268) 10 56
LC (269) 17
RC (270) 17
SEMI (271) 4 6 20 22 27 30
COMMA (272) 8 15 32 62 71
bool (273)
ASSIGNOP (274) 34 35 65
PLUS (275) 39
MINUS (276) 40 44
STAR (277) 41
DIV (278) 42
AND (279) 36
OR (280) 37
DOT (281)
NOT (282) 45
STRUCT (283)
RETURN (284) 22
BREAK (285) 61
IF (286) 23 24
ELSE (287) 24
WHILE (288) 25
FOR (289) 26
SELFADD (290) 46 47
SELFDEC (291) 48 49
ADD_ASSIGNOP (292) 50
MINUS_ASSIGNOP (293) 51
STAR_ASSIGNOP (294) 52
DIV_ASSIGNOP (295) 53
EXP_STMT (296)
FUNCTION (297)
PARAM (298)
ARG (299)
CALL (300)
LABEL (301)
GOTO (302)
JLT (303)
JLE (304)
JGT (305)
JGE (306)
EQ (307)
NEQ (308)
UMINUS (309)
LOWER_THAN_RB (310)
LOWER_THEN_ELSE (311)
ARRAY_FIRST (312)


Nonterminals, with rules where they appear

$accept (58)
    on left: 0
Program (59)
    on left: 1, on right: 0
ExtDefList (60)
    on left: 2 3, on right: 1 3
ExtDef (61)
    on left: 4 5 6, on right: 3
ExtDecList (62)
    on left: 7 8, on right: 4 8
Specifier (63)
    on left: 9, on right: 4 5 16 30
VarDec (64)
    on left: 10 11, on right: 7 8 16 33 34 46 47 48 49 50 51 52 53
    57 65 67
FuncDec (65)
    on left: 12 13, on right: 5
VarList (66)
    on left: 14 15, on right: 12 15
ParamDec (67)
    on left: 16, on right: 14 15
CompSt (68)
    on left: 17, on right: 5 21
StmtList (69)
    on left: 18 19, on right: 17 19
Stmt (70)
    on left: 20 21 22 23 24 25 26, on right: 19 23 24 25 26
ForCondition (71)
    on left: 27, on right: 26
DefList (72)
    on left: 28 29, on right: 17 29
Def (73)
    on left: 30, on right: 29
DecList (74)
    on left: 31 32, on right: 30 32
Dec (75)
    on left: 33 34, on right: 31 32
Exp (76)
    on left: 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52
    53 54 55 56 57 58 59 60 61, on right: 20 22 23 24 25 34 35 36 37
    38 39 40 41 42 43 44 45 50 51 52 53 56 62 63 65 67 70 71
Args (77)
    on left: 62 63, on right: 54 62
ExpFor1 (78)
    on left: 64 65, on right: 27
ExpFor2 (79)
    on left: 66 67, on right: 27
ExpFor3 (80)
    on left: 68 69, on right: 27
ExpFor3List (81)
    on left: 70 71, on right: 69 71


state 0

    0 $accept: . Program $end

    error  shift, and go to state 1
    TYPE   shift, and go to state 2

    $end  reduce using rule 2 (ExtDefList)

    Program     go to state 3
    ExtDefList  go to state 4
    ExtDef      go to state 5
    Specifier   go to state 6


state 1

    6 ExtDef: error . SEMI

    SEMI  shift, and go to state 7


state 2

    9 Specifier: TYPE .

    $default  reduce using rule 9 (Specifier)


state 3

    0 $accept: Program . $end

    $end  shift, and go to state 8


state 4

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


state 5

    3 ExtDefList: ExtDef . ExtDefList

    error  shift, and go to state 1
    TYPE   shift, and go to state 2

    $end  reduce using rule 2 (ExtDefList)

    ExtDefList  go to state 9
    ExtDef      go to state 5
    Specifier   go to state 6


state 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . FuncDec CompSt

    ID  shift, and go to state 10

    ExtDecList  go to state 11
    VarDec      go to state 12
    FuncDec     go to state 13


state 7

    6 ExtDef: error SEMI .

    $default  reduce using rule 6 (ExtDef)


state 8

    0 $accept: Program $end .

    $default  accept


state 9

    3 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 3 (ExtDefList)


state 10

   10 VarDec: ID . LB INT RB
   11       | ID .
   12 FuncDec: ID . LP VarList RP
   13        | ID . LP RP

    LP  shift, and go to state 14
    LB  shift, and go to state 15

    $default  reduce using rule 11 (VarDec)


state 11

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 16


state 12

    7 ExtDecList: VarDec .
    8           | VarDec . COMMA ExtDecList

    COMMA  shift, and go to state 17

    $default  reduce using rule 7 (ExtDecList)


state 13

    5 ExtDef: Specifier FuncDec . CompSt

    LC  shift, and go to state 18

    CompSt  go to state 19


state 14

   12 FuncDec: ID LP . VarList RP
   13        | ID LP . RP

    TYPE  shift, and go to state 2
    RP    shift, and go to state 20

    Specifier  go to state 21
    VarList    go to state 22
    ParamDec   go to state 23


state 15

   10 VarDec: ID LB . INT RB

    INT  shift, and go to state 24


state 16

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


state 17

    8 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 25

    ExtDecList  go to state 26
    VarDec      go to state 12


state 18

   17 CompSt: LC . DefList StmtList RC

    TYPE  shift, and go to state 2

    $default  reduce using rule 28 (DefList)

    Specifier  go to state 27
    DefList    go to state 28
    Def        go to state 29


state 19

    5 ExtDef: Specifier FuncDec CompSt .

    $default  reduce using rule 5 (ExtDef)


state 20

   13 FuncDec: ID LP RP .

    $default  reduce using rule 13 (FuncDec)


state 21

   16 ParamDec: Specifier . VarDec

    ID  shift, and go to state 25

    VarDec  go to state 30


state 22

   12 FuncDec: ID LP VarList . RP

    RP  shift, and go to state 31


state 23

   14 VarList: ParamDec .
   15        | ParamDec . COMMA VarList

    COMMA  shift, and go to state 32

    $default  reduce using rule 14 (VarList)


state 24

   10 VarDec: ID LB INT . RB

    RB  shift, and go to state 33


state 25

   10 VarDec: ID . LB INT RB
   11       | ID .

    LB  shift, and go to state 15

    $default  reduce using rule 11 (VarDec)


state 26

    8 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 8 (ExtDecList)


state 27

   30 Def: Specifier . DecList SEMI

    ID  shift, and go to state 25

    VarDec   go to state 34
    DecList  go to state 35
    Dec      go to state 36


state 28

   17 CompSt: LC DefList . StmtList RC

    INT      shift, and go to state 37
    FLOAT    shift, and go to state 38
    CHAR     shift, and go to state 39
    ID       shift, and go to state 40
    LP       shift, and go to state 41
    LC       shift, and go to state 18
    MINUS    shift, and go to state 42
    NOT      shift, and go to state 43
    RETURN   shift, and go to state 44
    BREAK    shift, and go to state 45
    IF       shift, and go to state 46
    WHILE    shift, and go to state 47
    FOR      shift, and go to state 48
    SELFADD  shift, and go to state 49
    SELFDEC  shift, and go to state 50

    $default  reduce using rule 18 (StmtList)

    VarDec    go to state 51
    CompSt    go to state 52
    StmtList  go to state 53
    Stmt      go to state 54
    Exp       go to state 55


state 29

   29 DefList: Def . DefList

    TYPE  shift, and go to state 2

    $default  reduce using rule 28 (DefList)

    Specifier  go to state 27
    DefList    go to state 56
    Def        go to state 29


state 30

   16 ParamDec: Specifier VarDec .

    $default  reduce using rule 16 (ParamDec)


state 31

   12 FuncDec: ID LP VarList RP .

    $default  reduce using rule 12 (FuncDec)


state 32

   15 VarList: ParamDec COMMA . VarList

    TYPE  shift, and go to state 2

    Specifier  go to state 21
    VarList    go to state 57
    ParamDec   go to state 23


state 33

   10 VarDec: ID LB INT RB .

    $default  reduce using rule 10 (VarDec)


state 34

   33 Dec: VarDec .
   34    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 58

    $default  reduce using rule 33 (Dec)


state 35

   30 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 59


state 36

   31 DecList: Dec .
   32        | Dec . COMMA DecList

    COMMA  shift, and go to state 60

    $default  reduce using rule 31 (DecList)


state 37

   58 Exp: INT .

    $default  reduce using rule 58 (Exp)


state 38

   59 Exp: FLOAT .

    $default  reduce using rule 59 (Exp)


state 39

   60 Exp: CHAR .

    $default  reduce using rule 60 (Exp)


state 40

   10 VarDec: ID . LB INT RB
   11       | ID .
   54 Exp: ID . LP Args RP
   55    | ID . LP RP
   56    | ID . LB Exp RB

    LP  shift, and go to state 61
    LB  shift, and go to state 62

    $default  reduce using rule 11 (VarDec)


state 41

   43 Exp: LP . Exp RP

    INT      shift, and go to state 37
    FLOAT    shift, and go to state 38
    CHAR     shift, and go to state 39
    ID       shift, and go to state 40
    LP       shift, and go to state 41
    MINUS    shift, and go to state 42
    NOT      shift, and go to state 43
    BREAK    shift, and go to state 45
    SELFADD  shift, and go to state 49
    SELFDEC  shift, and go to state 50

    VarDec  go to state 51
    Exp     go to state 63


state 42

   44 Exp: MINUS . Exp

    INT      shift, and go to state 37
    FLOAT    shift, and go to state 38
    CHAR     shift, and go to state 39
    ID       shift, and go to state 40
    LP       shift, and go to state 41
    MINUS    shift, and go to state 42
    NOT      shift, and go to state 43
    BREAK    shift, and go to state 45
    SELFADD  shift, and go to state 49
    SELFDEC  shift, and go to state 50

    VarDec  go to state 51
    Exp     go to state 64


state 43

   45 Exp: NOT . Exp

    INT      shift, and go to state 37
    FLOAT    shift, and go to state 38
    CHAR     shift, and go to state 39
    ID       shift, and go to state 40
    LP       shift, and go to state 41
    MINUS    shift, and go to state 42
    NOT      shift, and go to state 43
    BREAK    shift, and go to state 45
    SELFADD  shift, and go to state 49
    SELFDEC  shift, and go to state 50

    VarDec  go to state 51
    Exp     go to state 65


state 44

   22 Stmt: RETURN . Exp SEMI

    INT      shift, and go to state 37
    FLOAT    shift, and go to state 38
    CHAR     shift, and go to state 39
    ID       shift, and go to state 40
    LP       shift, and go to state 41
    MINUS    shift, and go to state 42
    NOT      shift, and go to state 43
    BREAK    shift, and go to state 45
    SELFADD  shift, and go to state 49
    SELFDEC  shift, and go to state 50

    VarDec  go to state 51
    Exp     go to state 66


state 45

   61 Exp: BREAK .

    $default  reduce using rule 61 (Exp)


state 46

   23 Stmt: IF . LP Exp RP Stmt
   24     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 67


state 47

   25 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 68


state 48

   26 Stmt: FOR . LP ForCondition RP Stmt

    LP  shift, and go to state 69


state 49

   47 Exp: SELFADD . VarDec

    ID  shift, and go to state 25

    VarDec  go to state 70


state 50

   49 Exp: SELFDEC . VarDec

    ID  shift, and go to state 25

    VarDec  go to state 71


state 51

   46 Exp: VarDec . SELFADD
   48    | VarDec . SELFDEC
   50    | VarDec . ADD_ASSIGNOP Exp
   51    | VarDec . MINUS_ASSIGNOP Exp
   52    | VarDec . STAR_ASSIGNOP Exp
   53    | VarDec . DIV_ASSIGNOP Exp
   57    | VarDec .

    SELFADD         shift, and go to state 72
    SELFDEC         shift, and go to state 73
    ADD_ASSIGNOP    shift, and go to state 74
    MINUS_ASSIGNOP  shift, and go to state 75
    STAR_ASSIGNOP   shift, and go to state 76
    DIV_ASSIGNOP    shift, and go to state 77

    $default  reduce using rule 57 (Exp)


state 52

   21 Stmt: CompSt .

    $default  reduce using rule 21 (Stmt)


state 53

   17 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 78


state 54

   19 StmtList: Stmt . StmtList

    INT      shift, and go to state 37
    FLOAT    shift, and go to state 38
    CHAR     shift, and go to state 39
    ID       shift, and go to state 40
    LP       shift, and go to state 41
    LC       shift, and go to state 18
    MINUS    shift, and go to state 42
    NOT      shift, and go to state 43
    RETURN   shift, and go to state 44
    BREAK    shift, and go to state 45
    IF       shift, and go to state 46
    WHILE    shift, and go to state 47
    FOR      shift, and go to state 48
    SELFADD  shift, and go to state 49
    SELFDEC  shift, and go to state 50

    $default  reduce using rule 18 (StmtList)

    VarDec    go to state 51
    CompSt    go to state 52
    StmtList  go to state 79
    Stmt      go to state 54
    Exp       go to state 55


state 55

   20 Stmt: Exp . SEMI
   35 Exp: Exp . ASSIGNOP Exp
   36    | Exp . AND Exp
   37    | Exp . OR Exp
   38    | Exp . RELOP Exp
   39    | Exp . PLUS Exp
   40    | Exp . MINUS Exp
   41    | Exp . STAR Exp
   42    | Exp . DIV Exp

    RELOP     shift, and go to state 80
    SEMI      shift, and go to state 81
    ASSIGNOP  shift, and go to state 82
    PLUS      shift, and go to state 83
    MINUS     shift, and go to state 84
    STAR      shift, and go to state 85
    DIV       shift, and go to state 86
    AND       shift, and go to state 87
    OR        shift, and go to state 88


state 56

   29 DefList: Def DefList .

    $default  reduce using rule 29 (DefList)


state 57

   15 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 15 (VarList)


state 58

   34 Dec: VarDec ASSIGNOP . Exp

    INT      shift, and go to state 37
    FLOAT    shift, and go to state 38
    CHAR     shift, and go to state 39
    ID       shift, and go to state 40
    LP       shift, and go to state 41
    MINUS    shift, and go to state 42
    NOT      shift, and go to state 43
    BREAK    shift, and go to state 45
    SELFADD  shift, and go to state 49
    SELFDEC  shift, and go to state 50

    VarDec  go to state 51
    Exp     go to state 89


state 59

   30 Def: Specifier DecList SEMI .

    $default  reduce using rule 30 (Def)


state 60

   32 DecList: Dec COMMA . DecList

    ID  shift, and go to state 25

    VarDec   go to state 34
    DecList  go to state 90
    Dec      go to state 36


state 61

   54 Exp: ID LP . Args RP
   55    | ID LP . RP

    INT      shift, and go to state 37
    FLOAT    shift, and go to state 38
    CHAR     shift, and go to state 39
    ID       shift, and go to state 40
    LP       shift, and go to state 41
    RP       shift, and go to state 91
    MINUS    shift, and go to state 42
    NOT      shift, and go to state 43
    BREAK    shift, and go to state 45
    SELFADD  shift, and go to state 49
    SELFDEC  shift, and go to state 50

    VarDec  go to state 51
    Exp     go to state 92
    Args    go to state 93


state 62

   10 VarDec: ID LB . INT RB
   56 Exp: ID LB . Exp RB

    INT      shift, and go to state 94
    FLOAT    shift, and go to state 38
    CHAR     shift, and go to state 39
    ID       shift, and go to state 40
    LP       shift, and go to state 41
    MINUS    shift, and go to state 42
    NOT      shift, and go to state 43
    BREAK    shift, and go to state 45
    SELFADD  shift, and go to state 49
    SELFDEC  shift, and go to state 50

    VarDec  go to state 51
    Exp     go to state 95


state 63

   35 Exp: Exp . ASSIGNOP Exp
   36    | Exp . AND Exp
   37    | Exp . OR Exp
   38    | Exp . RELOP Exp
   39    | Exp . PLUS Exp
   40    | Exp . MINUS Exp
   41    | Exp . STAR Exp
   42    | Exp . DIV Exp
   43    | LP Exp . RP

    RELOP     shift, and go to state 80
    RP        shift, and go to state 96
    ASSIGNOP  shift, and go to state 82
    PLUS      shift, and go to state 83
    MINUS     shift, and go to state 84
    STAR      shift, and go to state 85
    DIV       shift, and go to state 86
    AND       shift, and go to state 87
    OR        shift, and go to state 88


state 64

   35 Exp: Exp . ASSIGNOP Exp
   36    | Exp . AND Exp
   37    | Exp . OR Exp
   38    | Exp . RELOP Exp
   39    | Exp . PLUS Exp
   40    | Exp . MINUS Exp
   41    | Exp . STAR Exp
   42    | Exp . DIV Exp
   44    | MINUS Exp .

    $default  reduce using rule 44 (Exp)


state 65

   35 Exp: Exp . ASSIGNOP Exp
   36    | Exp . AND Exp
   37    | Exp . OR Exp
   38    | Exp . RELOP Exp
   39    | Exp . PLUS Exp
   40    | Exp . MINUS Exp
   41    | Exp . STAR Exp
   42    | Exp . DIV Exp
   45    | NOT Exp .

    $default  reduce using rule 45 (Exp)


state 66

   22 Stmt: RETURN Exp . SEMI
   35 Exp: Exp . ASSIGNOP Exp
   36    | Exp . AND Exp
   37    | Exp . OR Exp
   38    | Exp . RELOP Exp
   39    | Exp . PLUS Exp
   40    | Exp . MINUS Exp
   41    | Exp . STAR Exp
   42    | Exp . DIV Exp

    RELOP     shift, and go to state 80
    SEMI      shift, and go to state 97
    ASSIGNOP  shift, and go to state 82
    PLUS      shift, and go to state 83
    MINUS     shift, and go to state 84
    STAR      shift, and go to state 85
    DIV       shift, and go to state 86
    AND       shift, and go to state 87
    OR        shift, and go to state 88


state 67

   23 Stmt: IF LP . Exp RP Stmt
   24     | IF LP . Exp RP Stmt ELSE Stmt

    INT      shift, and go to state 37
    FLOAT    shift, and go to state 38
    CHAR     shift, and go to state 39
    ID       shift, and go to state 40
    LP       shift, and go to state 41
    MINUS    shift, and go to state 42
    NOT      shift, and go to state 43
    BREAK    shift, and go to state 45
    SELFADD  shift, and go to state 49
    SELFDEC  shift, and go to state 50

    VarDec  go to state 51
    Exp     go to state 98


state 68

   25 Stmt: WHILE LP . Exp RP Stmt

    INT      shift, and go to state 37
    FLOAT    shift, and go to state 38
    CHAR     shift, and go to state 39
    ID       shift, and go to state 40
    LP       shift, and go to state 41
    MINUS    shift, and go to state 42
    NOT      shift, and go to state 43
    BREAK    shift, and go to state 45
    SELFADD  shift, and go to state 49
    SELFDEC  shift, and go to state 50

    VarDec  go to state 51
    Exp     go to state 99


state 69

   26 Stmt: FOR LP . ForCondition RP Stmt

    ID  shift, and go to state 25

    $default  reduce using rule 64 (ExpFor1)

    VarDec        go to state 100
    ForCondition  go to state 101
    ExpFor1       go to state 102


state 70

   47 Exp: SELFADD VarDec .

    $default  reduce using rule 47 (Exp)


state 71

   49 Exp: SELFDEC VarDec .

    $default  reduce using rule 49 (Exp)


state 72

   46 Exp: VarDec SELFADD .

    $default  reduce using rule 46 (Exp)


state 73

   48 Exp: VarDec SELFDEC .

    $default  reduce using rule 48 (Exp)


state 74

   50 Exp: VarDec ADD_ASSIGNOP . Exp

    INT      shift, and go to state 37
    FLOAT    shift, and go to state 38
    CHAR     shift, and go to state 39
    ID       shift, and go to state 40
    LP       shift, and go to state 41
    MINUS    shift, and go to state 42
    NOT      shift, and go to state 43
    BREAK    shift, and go to state 45
    SELFADD  shift, and go to state 49
    SELFDEC  shift, and go to state 50

    VarDec  go to state 51
    Exp     go to state 103


state 75

   51 Exp: VarDec MINUS_ASSIGNOP . Exp

    INT      shift, and go to state 37
    FLOAT    shift, and go to state 38
    CHAR     shift, and go to state 39
    ID       shift, and go to state 40
    LP       shift, and go to state 41
    MINUS    shift, and go to state 42
    NOT      shift, and go to state 43
    BREAK    shift, and go to state 45
    SELFADD  shift, and go to state 49
    SELFDEC  shift, and go to state 50

    VarDec  go to state 51
    Exp     go to state 104


state 76

   52 Exp: VarDec STAR_ASSIGNOP . Exp

    INT      shift, and go to state 37
    FLOAT    shift, and go to state 38
    CHAR     shift, and go to state 39
    ID       shift, and go to state 40
    LP       shift, and go to state 41
    MINUS    shift, and go to state 42
    NOT      shift, and go to state 43
    BREAK    shift, and go to state 45
    SELFADD  shift, and go to state 49
    SELFDEC  shift, and go to state 50

    VarDec  go to state 51
    Exp     go to state 105


state 77

   53 Exp: VarDec DIV_ASSIGNOP . Exp

    INT      shift, and go to state 37
    FLOAT    shift, and go to state 38
    CHAR     shift, and go to state 39
    ID       shift, and go to state 40
    LP       shift, and go to state 41
    MINUS    shift, and go to state 42
    NOT      shift, and go to state 43
    BREAK    shift, and go to state 45
    SELFADD  shift, and go to state 49
    SELFDEC  shift, and go to state 50

    VarDec  go to state 51
    Exp     go to state 106


state 78

   17 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 17 (CompSt)


state 79

   19 StmtList: Stmt StmtList .

    $default  reduce using rule 19 (StmtList)


state 80

   38 Exp: Exp RELOP . Exp

    INT      shift, and go to state 37
    FLOAT    shift, and go to state 38
    CHAR     shift, and go to state 39
    ID       shift, and go to state 40
    LP       shift, and go to state 41
    MINUS    shift, and go to state 42
    NOT      shift, and go to state 43
    BREAK    shift, and go to state 45
    SELFADD  shift, and go to state 49
    SELFDEC  shift, and go to state 50

    VarDec  go to state 51
    Exp     go to state 107


state 81

   20 Stmt: Exp SEMI .

    $default  reduce using rule 20 (Stmt)


state 82

   35 Exp: Exp ASSIGNOP . Exp

    INT      shift, and go to state 37
    FLOAT    shift, and go to state 38
    CHAR     shift, and go to state 39
    ID       shift, and go to state 40
    LP       shift, and go to state 41
    MINUS    shift, and go to state 42
    NOT      shift, and go to state 43
    BREAK    shift, and go to state 45
    SELFADD  shift, and go to state 49
    SELFDEC  shift, and go to state 50

    VarDec  go to state 51
    Exp     go to state 108


state 83

   39 Exp: Exp PLUS . Exp

    INT      shift, and go to state 37
    FLOAT    shift, and go to state 38
    CHAR     shift, and go to state 39
    ID       shift, and go to state 40
    LP       shift, and go to state 41
    MINUS    shift, and go to state 42
    NOT      shift, and go to state 43
    BREAK    shift, and go to state 45
    SELFADD  shift, and go to state 49
    SELFDEC  shift, and go to state 50

    VarDec  go to state 51
    Exp     go to state 109


state 84

   40 Exp: Exp MINUS . Exp

    INT      shift, and go to state 37
    FLOAT    shift, and go to state 38
    CHAR     shift, and go to state 39
    ID       shift, and go to state 40
    LP       shift, and go to state 41
    MINUS    shift, and go to state 42
    NOT      shift, and go to state 43
    BREAK    shift, and go to state 45
    SELFADD  shift, and go to state 49
    SELFDEC  shift, and go to state 50

    VarDec  go to state 51
    Exp     go to state 110


state 85

   41 Exp: Exp STAR . Exp

    INT      shift, and go to state 37
    FLOAT    shift, and go to state 38
    CHAR     shift, and go to state 39
    ID       shift, and go to state 40
    LP       shift, and go to state 41
    MINUS    shift, and go to state 42
    NOT      shift, and go to state 43
    BREAK    shift, and go to state 45
    SELFADD  shift, and go to state 49
    SELFDEC  shift, and go to state 50

    VarDec  go to state 51
    Exp     go to state 111


state 86

   42 Exp: Exp DIV . Exp

    INT      shift, and go to state 37
    FLOAT    shift, and go to state 38
    CHAR     shift, and go to state 39
    ID       shift, and go to state 40
    LP       shift, and go to state 41
    MINUS    shift, and go to state 42
    NOT      shift, and go to state 43
    BREAK    shift, and go to state 45
    SELFADD  shift, and go to state 49
    SELFDEC  shift, and go to state 50

    VarDec  go to state 51
    Exp     go to state 112


state 87

   36 Exp: Exp AND . Exp

    INT      shift, and go to state 37
    FLOAT    shift, and go to state 38
    CHAR     shift, and go to state 39
    ID       shift, and go to state 40
    LP       shift, and go to state 41
    MINUS    shift, and go to state 42
    NOT      shift, and go to state 43
    BREAK    shift, and go to state 45
    SELFADD  shift, and go to state 49
    SELFDEC  shift, and go to state 50

    VarDec  go to state 51
    Exp     go to state 113


state 88

   37 Exp: Exp OR . Exp

    INT      shift, and go to state 37
    FLOAT    shift, and go to state 38
    CHAR     shift, and go to state 39
    ID       shift, and go to state 40
    LP       shift, and go to state 41
    MINUS    shift, and go to state 42
    NOT      shift, and go to state 43
    BREAK    shift, and go to state 45
    SELFADD  shift, and go to state 49
    SELFDEC  shift, and go to state 50

    VarDec  go to state 51
    Exp     go to state 114


state 89

   34 Dec: VarDec ASSIGNOP Exp .
   35 Exp: Exp . ASSIGNOP Exp
   36    | Exp . AND Exp
   37    | Exp . OR Exp
   38    | Exp . RELOP Exp
   39    | Exp . PLUS Exp
   40    | Exp . MINUS Exp
   41    | Exp . STAR Exp
   42    | Exp . DIV Exp

    RELOP     shift, and go to state 80
    ASSIGNOP  shift, and go to state 82
    PLUS      shift, and go to state 83
    MINUS     shift, and go to state 84
    STAR      shift, and go to state 85
    DIV       shift, and go to state 86
    AND       shift, and go to state 87
    OR        shift, and go to state 88

    $default  reduce using rule 34 (Dec)


state 90

   32 DecList: Dec COMMA DecList .

    $default  reduce using rule 32 (DecList)


state 91

   55 Exp: ID LP RP .

    $default  reduce using rule 55 (Exp)


state 92

   35 Exp: Exp . ASSIGNOP Exp
   36    | Exp . AND Exp
   37    | Exp . OR Exp
   38    | Exp . RELOP Exp
   39    | Exp . PLUS Exp
   40    | Exp . MINUS Exp
   41    | Exp . STAR Exp
   42    | Exp . DIV Exp
   62 Args: Exp . COMMA Args
   63     | Exp .

    RELOP     shift, and go to state 80
    COMMA     shift, and go to state 115
    ASSIGNOP  shift, and go to state 82
    PLUS      shift, and go to state 83
    MINUS     shift, and go to state 84
    STAR      shift, and go to state 85
    DIV       shift, and go to state 86
    AND       shift, and go to state 87
    OR        shift, and go to state 88

    $default  reduce using rule 63 (Args)


state 93

   54 Exp: ID LP Args . RP

    RP  shift, and go to state 116


state 94

   10 VarDec: ID LB INT . RB
   58 Exp: INT .

    RB  shift, and go to state 33

    $default  reduce using rule 58 (Exp)


state 95

   35 Exp: Exp . ASSIGNOP Exp
   36    | Exp . AND Exp
   37    | Exp . OR Exp
   38    | Exp . RELOP Exp
   39    | Exp . PLUS Exp
   40    | Exp . MINUS Exp
   41    | Exp . STAR Exp
   42    | Exp . DIV Exp
   56    | ID LB Exp . RB

    RELOP     shift, and go to state 80
    RB        shift, and go to state 117
    ASSIGNOP  shift, and go to state 82
    PLUS      shift, and go to state 83
    MINUS     shift, and go to state 84
    STAR      shift, and go to state 85
    DIV       shift, and go to state 86
    AND       shift, and go to state 87
    OR        shift, and go to state 88


state 96

   43 Exp: LP Exp RP .

    $default  reduce using rule 43 (Exp)


state 97

   22 Stmt: RETURN Exp SEMI .

    $default  reduce using rule 22 (Stmt)


state 98

   23 Stmt: IF LP Exp . RP Stmt
   24     | IF LP Exp . RP Stmt ELSE Stmt
   35 Exp: Exp . ASSIGNOP Exp
   36    | Exp . AND Exp
   37    | Exp . OR Exp
   38    | Exp . RELOP Exp
   39    | Exp . PLUS Exp
   40    | Exp . MINUS Exp
   41    | Exp . STAR Exp
   42    | Exp . DIV Exp

    RELOP     shift, and go to state 80
    RP        shift, and go to state 118
    ASSIGNOP  shift, and go to state 82
    PLUS      shift, and go to state 83
    MINUS     shift, and go to state 84
    STAR      shift, and go to state 85
    DIV       shift, and go to state 86
    AND       shift, and go to state 87
    OR        shift, and go to state 88


state 99

   25 Stmt: WHILE LP Exp . RP Stmt
   35 Exp: Exp . ASSIGNOP Exp
   36    | Exp . AND Exp
   37    | Exp . OR Exp
   38    | Exp . RELOP Exp
   39    | Exp . PLUS Exp
   40    | Exp . MINUS Exp
   41    | Exp . STAR Exp
   42    | Exp . DIV Exp

    RELOP     shift, and go to state 80
    RP        shift, and go to state 119
    ASSIGNOP  shift, and go to state 82
    PLUS      shift, and go to state 83
    MINUS     shift, and go to state 84
    STAR      shift, and go to state 85
    DIV       shift, and go to state 86
    AND       shift, and go to state 87
    OR        shift, and go to state 88


state 100

   65 ExpFor1: VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 120


state 101

   26 Stmt: FOR LP ForCondition . RP Stmt

    RP  shift, and go to state 121


state 102

   27 ForCondition: ExpFor1 . SEMI ExpFor2 SEMI ExpFor3

    SEMI  shift, and go to state 122


state 103

   35 Exp: Exp . ASSIGNOP Exp
   36    | Exp . AND Exp
   37    | Exp . OR Exp
   38    | Exp . RELOP Exp
   39    | Exp . PLUS Exp
   40    | Exp . MINUS Exp
   41    | Exp . STAR Exp
   42    | Exp . DIV Exp
   50    | VarDec ADD_ASSIGNOP Exp .
